# umi-transfer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  integrated1.fastq  integrated2.fastq  makefile
.github/workflows/: clippy.yml  container.yml  dockerhub.yml  release.yml  rust.yml  testing.yml
src/: auxiliary.rs  file_io.rs  main.rs  read_editing.rs  umi_errors.rs  umi_external.rs
tests/: auxiliary.rs  integration_tests.rs  integration_tests_external.rs  integration_tests_external_filecontents.rs  integration_tests_main.rs
tests/results/: correct_read1.fq  corrected_read2.fq  delim_underscore_read1.fq  delim_underscore_read2.fq  header_correct_read2.fq  inline_correct_read2.fq  inline_corrected_read1.fq  inline_corrected_read2.fq  umi_read2_switch_read1.fq  umi_read2_switch_read2.fq
tests/seqdata/: read1.fq  read2.fq  umi.fq  umi_shuffled.fq
