[package]
name = "umi-transfer"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
bio = "1.6.0"
flate2 = "1.0.24"
itertools = "0.12.1"
file-format = "0.24.0"
anyhow = "1.0.82"
dialoguer = "0.11.0"
regex = "1.10.4"
owo-colors = { version = "4.0", features = ["supports-colors"] }
gzp = "0.11.3"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
rexpect = "0.5.0"

[workspace.metadata.marker.lints]
marker_lints = "0.5.0"
