[package]
name = "umi-transfer"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
bio = "2.0.3"
flate2 = "1.0.35"
itertools = "0.14.0"
file-format = "0.26.0"
anyhow = "1.0.95"
dialoguer = "0.11.0"
regex = "1.11.1"
owo-colors = { version = "4.1", features = ["supports-colors"] }
gzp = "0.11.3"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
rexpect = "0.6.0"

[workspace.metadata.marker.lints]
marker_lints = "0.5.0"
