[package]
name = "umi-transfer"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
bio = "3.0.0"
flate2 = "1.1.5"
itertools = "0.14.0"
file-format = "0.28.0"
anyhow = "1.0.100"
dialoguer = "0.12.0"
regex = "1.12.2"
owo-colors = { version = "4.2", features = ["supports-colors"] }
gzp = "2.0.0"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
rexpect = "0.6.2"

